--- a/Online_Course/Areas/Instructor/Views/Analytics/Index.cshtml
+++ b/Online_Course/Areas/Instructor/Views/Analytics/Index.cshtml
@@ -82,7 +82,7 @@
                             <td class="px-6 py-4">
                                 <div class="flex flex-col">
                                     <span class="text-slate-900 dark:text-white font-medium">@course.Title</span>
-                                    <span class="text-gray-500 dark:text-slate-400 text-xs">@course.Category</span>
+                                    <span class="text-gray-500 dark:text-slate-400 text-xs">@course.CategoryName</span>
                                 </div>
                             </td>
                             <td class="text-center px-4 py-4">
