--- a/Online_Course/Areas/Admin/Views/Users/Details.cshtml
+++ b/Online_Course/Areas/Admin/Views/Users/Details.cshtml
@@ -116,7 +116,7 @@
                                         <span class="text-slate-900 dark:text-white font-medium">@course.Title</span>
                                     </td>
                                     <td class="text-center px-4 py-4">
-                                        <span class="text-gray-600 dark:text-slate-300">@course.Category</span>
+                                        <span class="text-gray-600 dark:text-slate-300">@course.CategoryName</span>
                                     </td>
                                     <td class="text-center px-4 py-4">
                                         <span class="text-slate-900 dark:text-white">@course.EnrollmentCount</span>
